-------------------------------------------------------------------------------
Version 0.7.1

API changes:
- Renamed Axis.getMouseOverItem  to Axis.getMouseItem

-------------------------------------------------------------------------------
Version 0.7.0

API changes:
- Added tree methods in Section
- Added ColumnGrouping experimental class
- Added Zone.isMerged(X, X, Y, Y) to check if any cell in the given range is merged
- Modified Zone.setMerged has state flag which ensures the merging is removed or added, and not work as a toggle.
- Extent implements Iterable

-------------------------------------------------------------------------------
Version 0.6.5

Bug fixes:
- NullPointerExeception during cancel in embedded editor

-------------------------------------------------------------------------------
Version 0.6.4

API changes:
- Added Painter.clipText()

-------------------------------------------------------------------------------
Version 0.6.3

Bug fixes:
- Matrix.computeSize computed wrong numbers for GridData.grabExcessVerticalSpace = false

-------------------------------------------------------------------------------
Version 0.6.2

Bug fixes:
- IndexOutOfBoundsException in Matrix.computeSize in case of 0 cells

-------------------------------------------------------------------------------
Version 0.6.1

Bug fixes:
- Everything was obfuscated

API changes:
- Util.equals

Snippets:
- Added S0904_Tooltip

-------------------------------------------------------------------------------
Version 0.6.0

New features:
- Cell merging

Behavior change:
- Zone.getSelectedExtent returns null instead of (0,0,0,0) when nothing is selected.
- Zone.isSelected throws IllegalArgumentException only if both <code>indexX</code> and <code>indexY</code> are null. If one the parameters is null then the method returns true if any cell with the other index is selected.

API changes:
- Deprecated Zone.getSelectionCount. Use Zone.getSelectedCount instead.
- Added Zone.setMerged